--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             Muhammad Rifa Maulana Aziz <br />Putra dari bpk. dan Ibu.
           </p>
           <p class="fw-bolder">
-            Rifa Alifa Afrilia <br />
+            Maulana Rifa Muhammad Aziz <br />
             Putri dari bpk. dan Ibu.
           </p>
         </div>
