--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="cs-1.jpg" class="d-block w-100" alt="..." />
+            <img src="./imgcs-1.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="cs-4.jpg" class="d-block w-100" alt="..." />
+            <img src="./img/cs-4.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="cs-7.jpg" class="d-block w-100" alt="..." />
+            <img src="./img/cs-7.jpg" class="d-block w-100" alt="..." />
           </div>
         </div>
       </div>
@@ -66,13 +66,13 @@
             >
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="cs-1.jpg" class="d-block w-100" alt="..." />
+                  <img src="./img/cs-1.jpg" class="d-block w-100" alt="..." />
                 </div>
                 <div class="carousel-item">
-                  <img src="cs-4.jpg" class="d-block w-100" alt="..." />
+                  <img src="./img/cs-4.jpg" class="d-block w-100" alt="..." />
                 </div>
                 <div class="carousel-item">
-                  <img src="cs-7.jpg" class="d-block w-100" alt="..." />
+                  <img src="./img/cs-7.jpg" class="d-block w-100" alt="..." />
                 </div>
               </div>
             </div>
@@ -85,13 +85,13 @@
             >
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="cs-1.jpg" class="d-block w-100" alt="..." />
+                  <img src="./img/cs-1.jpg" class="d-block w-100" alt="..." />
                 </div>
                 <div class="carousel-item">
-                  <img src="cs-4.jpg" class="d-block w-100" alt="..." />
+                  <img src="./img/cs-4.jpg" class="d-block w-100" alt="..." />
                 </div>
                 <div class="carousel-item">
-                  <img src="cs-7.jpg" class="d-block w-100" alt="..." />
+                  <img src="./img/cs-7.jpg" class="d-block w-100" alt="..." />
                 </div>
               </div>
             </div>
@@ -121,12 +121,12 @@
           class="w-25 h-25 mb-3 m-3 justify-content-evenly d-flex flex-direction mx-auto align-content-between grid gap-3"
         >
           <img
-            src="rifabirukotak.jpg"
+            src="./img/rifabirukotak.jpg"
             class="img-fluid float-start mx-5 rounded-circle"
             alt="foto-pengantin-pria"
           />
           <img
-            src="rifabirukotak.jpg"
+            src="./img/rifabirukotak.jpg"
             class="img-fluid float-end mx-5 rounded-circle"
             alt="foto-pengantin-wanita"
           />
@@ -146,10 +146,10 @@
         class="container text-center shadow-sm p-3 mb-5 bg-body-tertiary rounded"
       >
         <div class="row row-cols-2">
-          <div class="col"><img src="cs-1.jpg" alt="" /></div>
-          <div class="col"><img src="cs-4.jpg" alt="" /></div>
-          <div class="col"><img src="cs-7.jpg" alt="" /></div>
-          <div class="col"><img src="cs-1.jpg" alt="" /></div>
+          <div class="col"><img src="./img/cs-1.jpg" alt="" /></div>
+          <div class="col"><img src="./img/cs-4.jpg" alt="" /></div>
+          <div class="col"><img src="./img/cs-7.jpg" alt="" /></div>
+          <div class="col"><img src="./img/cs-1.jpg" alt="" /></div>
         </div>
       </div>
     </div>
