--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- count end -->
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="bg-secondary flex-direction">
+  <body class="bg-white flex-direction">
     <section
       id="hero"
       class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white"
@@ -32,7 +32,7 @@
         <h1>Rifa & Rifa</h1>
         <p>akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown"></div>
-        <a href="#undangan" class="btn btn-lg mt-4">Lihat Undangan</a>
+        <a href="#undangan" class="btn btn-lg mt-4 fw-bold">Lihat Undangan</a>
       </main>
     </section>
     <div class="container-fluid">
@@ -44,7 +44,7 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./imgcs-1.jpg" class="d-block w-100" alt="..." />
+            <img src="./img/cs-1.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
             <img src="./img/cs-4.jpg" class="d-block w-100" alt="..." />
@@ -56,7 +56,7 @@
       </div>
       <!-- cr1end -->
       <!-- cr2 -->
-      <div class="container mt-3 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
+      <div class="container mt-3 shadow-lg p-3 mb-5 bg-secondary rounded">
         <div class="row">
           <div class="col">
             <div
@@ -101,7 +101,7 @@
 
       <!-- cr2end -->
       <!-- paragraf -->
-      <div id="undangan" class="bg-secondary mt-3 mb-3">
+      <div id="undangan" class="bg-white mt-3 mb-3">
         <h1 id="rifa" class="text-center pt-5">Rifa & Rifa</h1>
         <span
           class="container-fluid align-items-center justify-content-center text-center d-flex fw-bolder pt-5 pb-5"
@@ -143,7 +143,7 @@
       </div>
       <!-- paragrafend -->
       <div
-        class="container text-center shadow-sm p-3 mb-5 bg-body-tertiary rounded"
+        class="container text-center shadow-sm p-3 mb-5 bg-secondary rounded"
       >
         <div class="row row-cols-2">
           <div class="col"><img src="./img/cs-1.jpg" alt="" /></div>
@@ -153,6 +153,9 @@
         </div>
       </div>
     </div>
+    <footer class="bg-secondary p-3 text-center text-white fw-bold">
+      <p>Disclaimer : Ini cuman template aja ya adick-adick</p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
