--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         </div>
       </div>
     </div>
-    <audio autoplay loop>
-      <source src="./audio/a thousand year.mp3" type="audio/mp3" />
+    <audio autoplay loop hidden>
+      <source src="./audio/a-thousand-year.mp3" type="audio/mp3" />
       browser nya gak mendukung putar audio
     </audio>
     <footer class="bg-secondary p-3 text-center text-white fw-bold">
